--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>br.ufpe.cin</groupId>
+  <groupId>com.github.lbam</groupId>
   <artifactId>dcbot</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -15,6 +15,10 @@
   </properties>
 
    <repositories>
+   		<repository> <!-- This repo fixes issues with transitive dependencies -->
+    		<id>jcenter</id>
+    		<url>http://jcenter.bintray.com</url>
+  		</repository>
 		<repository>
 			<id>jitpack.io</id>
 			<url>https://jitpack.io</url>
